# signalyser-suite

./: .gitignore  CLAUDE.md  LICENSE  README.md  _bootstrap.py  pyproject.toml  requirements.txt  setup.sh  signalyser.py  start-web.ps1  stop-web.ps1
signalyser_core/: __init__.py  chunking.py  cli.py  env.py  io.py  processing.py  reddit.py
signalyser_web/: __init__.py  __main__.py  app.py  config.py  corpus.py  runner.py  sessions.py  settings.py
signalyser_web/static/: app.css  app.js  app_v2.css  app_v2.js
signalyser_web/templates/: base.html  corpus.html  dashboard.html  reports.html  sessions.html  settings.html  tools.html  view.html
tests/: test_assets.py  test_bootstrap.py  test_core.py  test_cta_tracker.py  test_job_postings.py  test_launcher.py  test_opportunities.py  test_page_decoder.py  test_personas.py  test_positioning_arc.py  test_quadrant.py  test_sessions.py  test_tenk.py  test_ui.py  test_web.py  test_youtube.py
tools/assets/: README.md  assets.py
tools/cta_tracker/: cta.py
tools/job_postings/: README.md  analyse.py  requirements.txt
tools/opportunities/: opportunities.py
tools/page_decoder/: README.md  decode.py
tools/personas/: README.md  personas.py
tools/positioning_arc/: README.md  arc.py
tools/quadrant/: README.md  quadrant.py
tools/reddit/: .env.example  .gitignore  CLAUDE.md  README.md  _tests.py  reddit_miner.original.py  reddit_miner.py  requirements.txt  sample-output.md  setup.sh
tools/tenk/: README.md  analyse.py
tools/youtube/: README.md  summarize.py
